# secure_agents

./: .env.example  README.md  RUNNING.md  main.py  pyproject.toml
arbiter/: __init__.py
arbiter/behavior/: __init__.py  attack_classifier.py  calibration.py  central_detector.py  daemon.py  detectors.py  embedding_service.py  event_bus.py  policy.py  profile_store.py  sequence_model.py  telemetry.py  watchdog.py
arbiter/benchmarks/: __init__.py  ablation.py  attacks.py  latency.py  report.py  revocation.py  runner.py  security.py
arbiter/common/: __init__.py  errors.py  models.py  utils.py
arbiter/crypto/: __init__.py  accumulators.py  bbs_plus.py  commitments.py  pqc.py
arbiter/identity/: __init__.py  did.py  key_management.py  registry_interface.py  revocation.py  vc_issuer.py  verification_hub.py  zkp_proofs.py
arbiter/integrity/: __init__.py  policy_models.py
arbiter/simulator/: ADVANCED_RESEARCH_README.md  __init__.py  agents.py  crew.py  runner.py  scenarios.py  tools.py
benchmark_results/: ablation_results.json  benchmark_summary.json  latency_results.json  paper_package.json  revocation_results.json  scenario_results.json  security_results.json  throughput_results.json
docs/: installation.mdx  introduction.mdx  mint.json  quickstart.mdx  results-section-template.md
docs/api-reference/: behavior.mdx  crypto.mdx  identity.mdx  integrity.mdx
docs/architecture/: behavior-layer.mdx  identity-layer.mdx  integrity-layer.mdx  overview.mdx  security-model.mdx
docs/cryptography/: accumulators.mdx  (+4 more)
examples/: behavior_demo.py
tests/: test_arbiter.py
(+23 files in other folders)
